feat: improve Java run workflow and execution feedback